--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 						</div>
 					</section>
 
-				<!-- Four -->
+				<!-- Four 
 					<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in">
 						<div class="content">
 							<h2>Pharetra etiam nulla</h2>
@@ -66,14 +66,14 @@
 						<div class="image">
 							<img src="images/spotlight03.jpg" alt="" />
 						</div>
-					</section>
+					</section> -->
 
-				<!-- Five -->
+				<!-- Five 
 					<section class="wrapper style1 align-center">
 						<div class="inner">
 							<h2>Massa sed condimentum</h2>
 							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi id ante sed ex pharetra lacinia sit amet vel massa. Donec facilisis laoreet nulla eu bibendum. Donec ut ex risus. Fusce lorem lectus, pharetra pretium massa et, hendrerit vestibulum odio lorem ipsum.</p>
-						</div>
+						</div> -->
 
 						<!-- Gallery -->
 							<div class="gallery style2 medium lightbox onscroll-fade-in">
@@ -245,12 +245,12 @@
 									<span class="icon solid style2 major fa-chart-bar"></span>
 									<h3>Dolor</h3>
 									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p>
-								</section>
-								<section>
+								</section>  
+								<!-- <section>
 									<span class="icon solid style2 major fa-wifi"></span>
 									<h3>Amet</h3>
 									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p>
-								</section>
+								</section> 
 								<section>
 									<span class="icon solid style2 major fa-cog"></span>
 									<h3>Magna</h3>
@@ -290,7 +290,7 @@
 									<span class="icon solid style2 major fa-leaf"></span>
 									<h3>Risus</h3>
 									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p>
-								</section>
+								</section> -->
 							</div>
 						</div>
 					</section>
@@ -322,7 +322,7 @@
 						</div>
 					</section>
 
-				<!-- Footer -->
+				<!-- Footer 
 					<footer class="wrapper style1 align-center">
 						<div class="inner">
 							<ul class="icons">
@@ -331,8 +331,8 @@
 								<li><a href="#" class="icon brands style2 fa-instagram"><span class="label">Instagram</span></a></li>
 								<li><a href="#" class="icon brands style2 fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
 								<li><a href="#" class="icon style2 fa-envelope"><span class="label">Email</span></a></li>
-							</ul>
-							<p>&copy; Untitled. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
+							</ul> -->
+							<p>Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | oneRaven, LLC</p>
 						</div>
 					</footer>
 
