--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 				<!-- One -->
 					<section class="banner style1 orient-left content-align-left image-position-right fullscreen onload-image-fade-in onload-content-fade-right">
 						<div class="content">
-							<h1>oneRaven Energy logo?</h1>
+							<h1><img src="images/ORlogo_WHITE_energy.png"</h1>
 							<p class="major">Positioning for the future of global energy solutions. All-encompassing experience. <i>Actually</i> sustainable and environmentally-friendly.</p>
 							<ul class="actions stacked">
 								<li><a href="#first" class="button big wide smooth-scroll-middle">Get Started</a></li>
