--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <h1><img src="images/ORlogo_small.png"></h1>
 <p class="major">Positioning for the future of global energy solutions. All-encompassing experience. <i>Actually</i> sustainable and environmentally-friendly.</p>
 							<ul class="actions stacked">
-					<li><a href="#first" class="button big wide smooth-scroll-middle">Get Started</a></li>
+					<li><a href="#second" class="button big wide smooth-scroll-middle">Get Started</a></li>
 							</ul>
 						</div>
 						<div class="image">
@@ -41,7 +41,7 @@
 					</section>
 
 				<!-- Three -->
-		<section class="spotlight style1 orient-left content-align-left image-position-center onscroll-image-fade-in">
+		<section class="spotlight style1 orient-left content-align-left image-position-center onscroll-image-fade-in" id="second">
 						<div class="content">
 							<h2>About oneRaven</h2>
 							<p> stuff</p>
