--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 							</ul>
 						</div>
 						<div class="image">
-							<img src="images/banner.jpg" alt="" />
+							<img src="images/river_edit.jpg" alt="" />
 						</div>
 					</section>
 
