--- a/index.html
+++ b/index.html
@@ -299,7 +299,8 @@
 					<section class="wrapper style1 align-center">
 						<div class="inner medium">
 							<h2>Get in touch</h2>
-							<form method="post" action="#">
+							<h3><a href="mailto:oneravenenergy@protonmail.com">Send an email</a></h3>
+							<!-- <form method="post" action="#">
 								<div class="fields">
 									<div class="field half">
 										<label for="name">Name</label>
@@ -317,7 +318,7 @@
 								<ul class="actions special">
 									<li><input type="submit" name="submit" id="submit" value="Send Message" /></li>
 								</ul>
-							</form>
+							</form> -->
 
 						</div>
 					</section>
