--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 							</ul>
 						</div>
 						<div class="image">
-							<img src="images/spotlight01.jpg" alt="" />
+							<img src="images/heartmtn.jpg" alt="" />
 						</div>
 					</section>
 
@@ -50,7 +50,7 @@
 							</ul>
 						</div>
 						<div class="image">
-							<img src="images/spotlight02.jpg" alt="" />
+							<img src="images/pilot.jpg" alt="" />
 						</div>
 					</section>
 
