--- a/links.html
+++ b/links.html
@@ -15,18 +15,18 @@
 				<!-- One -->
 					<section class="banner style1 orient-left content-align-left image-position-right fullscreen onload-image-fade-in onload-content-fade-right">
 						<div class="content">
-							<h1>oneRaven Energy logo?</h1>
+							<h1><img src="images/ORlogo_small.png"></h1>
 							<p class="major">Sources</p>
 							<!--<ul class="actions stacked">
 								<li><a href="#first" class="button big wide smooth-scroll-middle">Get Started</a></li>
 							</ul> -->
 						</div>
 						<div class="image">
-							<img src="images/banner.jpg" alt="" />
+							<img src="images/flowers.jpg" alt="" />
 						</div>
 					</section>
 
-				<!-- Two -->
+				<!-- Two 
 					<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in" id="first">
 						<div class="content">
 							<h2>Magna etiam feugiat</h2>
@@ -38,9 +38,9 @@
 						<div class="image">
 							<img src="images/spotlight01.jpg" alt="" />
 						</div>
-					</section>
+					</section> -->
 
-				<!-- Three -->
+				<!-- Three
 					<section class="spotlight style1 orient-left content-align-left image-position-center onscroll-image-fade-in">
 						<div class="content">
 							<h2>Tempus adipiscing</h2>
@@ -52,7 +52,7 @@
 						<div class="image">
 							<img src="images/spotlight02.jpg" alt="" />
 						</div>
-					</section>
+					</section>  -->
 
 				<!-- Four 
 					<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in">
@@ -68,14 +68,14 @@
 						</div>
 					</section> -->
 
-				<!-- Five 
+				<!-- Five -->
 					<section class="wrapper style1 align-center">
 						<div class="inner">
-							<h2>Massa sed condimentum</h2>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi id ante sed ex pharetra lacinia sit amet vel massa. Donec facilisis laoreet nulla eu bibendum. Donec ut ex risus. Fusce lorem lectus, pharetra pretium massa et, hendrerit vestibulum odio lorem ipsum.</p>
-						</div> -->
+							<h2>Links</h2>
+							<p>This is where a list of all the shit goes. I've been too busy building this website to actually do any work.</p>
+						</div> 
 
-						<!-- Gallery -->
+						<!-- Gallery 
 							<div class="gallery style2 medium lightbox onscroll-fade-in">
 								<article>
 									<a href="images/gallery/fulls/01.jpg" class="image">
@@ -223,9 +223,9 @@
 								</article>
 							</div>
 
-					</section>
+					</section> -->
 
-				<!-- Six -->
+				<!-- Six 
 					<section class="wrapper style1 align-center">
 						<div class="inner">
 							<h2>Ipsum sed consequat</h2>
@@ -290,16 +290,17 @@
 									<span class="icon solid style2 major fa-leaf"></span>
 									<h3>Risus</h3>
 									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p>
-								</section> -->
+								</section> 
 							</div>
 						</div>
-					</section>
+					</section> -->
 
 				<!-- Seven -->
 					<section class="wrapper style1 align-center">
 						<div class="inner medium">
 							<h2>Get in touch</h2>
-							<form method="post" action="#">
+							<h3><a href="mailto:oneravenenergy@protonmail.com">Send an email</a></h3>
+							<!--<form method="post" action="#">
 								<div class="fields">
 									<div class="field half">
 										<label for="name">Name</label>
@@ -317,7 +318,7 @@
 								<ul class="actions special">
 									<li><input type="submit" name="submit" id="submit" value="Send Message" /></li>
 								</ul>
-							</form>
+							</form> -->
 
 						</div>
 					</section>
@@ -332,7 +333,7 @@
 								<li><a href="#" class="icon brands style2 fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
 								<li><a href="#" class="icon style2 fa-envelope"><span class="label">Email</span></a></li>
 							</ul> -->
-							<p>Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | oneRaven, LLC</p>
+							<p>Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | <a href="https://www.oneravendesigns.com">oneRaven, LLC</a></p>
 						</div>
 					</footer>
 
