--- a/index.html
+++ b/index.html
@@ -333,7 +333,7 @@
 								<li><a href="#" class="icon brands style2 fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
 								<li><a href="#" class="icon style2 fa-envelope"><span class="label">Email</span></a></li>
 							</ul> -->
-							<p align=center>Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | oneRaven, LLC</p>
+							<p align=center>Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | <a href="https://www.oneravendesigns.com">oneRaven, LLC</a></p>
 						</div>
 					</footer>
 
