--- a/links.html
+++ b/links.html
@@ -16,7 +16,7 @@
 					<section class="banner style1 orient-left content-align-left image-position-right fullscreen onload-image-fade-in onload-content-fade-right">
 						<div class="content">
 							<h1><img src="images/ORlogo_small.png"></h1>
-							<p class="major">Sources</p>
+							<h2><p class="major">Sources</p></h2>
 							<!--<ul class="actions stacked">
 								<li><a href="#first" class="button big wide smooth-scroll-middle">Get Started</a></li>
 							</ul> -->
