--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 		<section class="spotlight style1 orient-left content-align-left image-position-center onscroll-image-fade-in" id="second">
 						<div class="content">
 							<h2>About oneRaven</h2>
-							<p> oneRaven was founded with the intent of providing holistic consulting for the emerging nuclear market in the Rocky Mountain region. The ability to provide guidance on most facets from concept-to-construction makes oneRaven one of the only entities in the country with the skills and education to fill such a role.</p>
+							<p> oneRaven was founded with the intent of providing holistic consulting for the emerging nuclear market in the Rocky Mountain region. The ability to provide guidance on most facets from concept-to-construction will make oneRaven one of the only entities in the country with the experience, skills, and education to fill such a role.</p>
 							<ul class="actions stacked">
 								<li><a href="https://www.kimbanathy.com" class="button">Learn More</a></li>
 							</ul>
