--- a/links.html
+++ b/links.html
@@ -73,6 +73,9 @@
 						<div class="inner">
 							<h2>Links</h2>
 							<p>This is where a list of all the shit goes. I've been too busy building this website to actually do any work.</p>
+
+	<h3>Fukushima</h3>
+		<p><a href="https://apnews.com/article/japan-fukushima-nuclear-plant-water-release-cf6f2b99df9cea91abc7b2ad2d23d9fd">AP gets a rare look at Japan’s Fukushima nuclear plant as it prepares to release radioactive water - July 14, 2023</p>
 						</div> 
 
 						<!-- Gallery 
