--- a/links.html
+++ b/links.html
@@ -75,16 +75,16 @@
 							<p>This is where a list of all the shit goes. I've been too busy building this website to actually do any work.</p>
 
 <h3>Radiation Basics</h3>
-		<p><a href="https://www.epa.gov/radiation/radiation-basics">US EPA- Radiation Basics - July 18, 2023</p>		
+		<p><a href="https://www.epa.gov/radiation/radiation-basics">US EPA- Radiation Basics - July 18, 2023</a></p>		
 			
 		<br>					
 	<h3>Fukushima</h3>
-		<p><a href="https://apnews.com/article/japan-fukushima-nuclear-plant-water-release-cf6f2b99df9cea91abc7b2ad2d23d9fd">Associated Press- AP gets a rare look at Japan’s Fukushima nuclear plant as it prepares to release radioactive water - July 14, 2023</p>
+		<p><a href="https://apnews.com/article/japan-fukushima-nuclear-plant-water-release-cf6f2b99df9cea91abc7b2ad2d23d9fd">Associated Press- AP gets a rare look at Japan’s Fukushima nuclear plant as it prepares to release radioactive water - July 14, 2023</a></p>
 			<br>
 	<h3>Tritium</h3>
-		<p><a href="https://www.thoughtco.com/facts-about-tritium-607915">ThoughtCo- 10 Interesting Facts about Radioactive Tritium - January 9, 2020</p>			
-		<p><a href="https://hps.org/documents/tritium_fact_sheet.pdf">Health Physics Society- Tritium Fact Sheet - January 2020</p>				
-			<p><a href="https://www.nrc.gov/reading-rm/doc-collections/fact-sheets/tritium-radiation-fs.html#what">US Nuclear Regulatory Commission (NRC)- What is the NRC doing about the tritium leaks and spills at nuclear power plants?- October 18, 2022</p>				
+		<p><a href="https://www.thoughtco.com/facts-about-tritium-607915">ThoughtCo- 10 Interesting Facts about Radioactive Tritium - January 9, 2020</a></p>			
+		<p><a href="https://hps.org/documents/tritium_fact_sheet.pdf">Health Physics Society- Tritium Fact Sheet - January 2020</a></p>				
+			<p><a href="https://www.nrc.gov/reading-rm/doc-collections/fact-sheets/tritium-radiation-fs.html#what">US Nuclear Regulatory Commission (NRC)- What is the NRC doing about the tritium leaks and spills at nuclear power plants?- October 18, 2022</a></p>				
 				<br>
 				
 						
