--- a/index.html
+++ b/index.html
@@ -232,17 +232,17 @@
 							<p>Combining all three things to make crazy shit </p>
 							<div class="items style1 medium onscroll-fade-in">
 								<section>
-									<span class="icon style2 major fa-gem"></span>
+									<span class="icon style2 major fa-atom"></span>
 									<h3>Nuclear</h3>
 									<p>Reactors and stuff</p>
 								</section>
 								<section>
-									<span class="icon solid style2 major fa-save"></span>
+									<span class="icon solid style2 major fa-road"></span>
 									<h3>Civil</h3>
 									<p>Specializing in large commercial and industrial site plans, I can do things</p>
 								</section>
 								<section>
-									<span class="icon solid style2 major fa-chart-bar"></span>
+									<span class="icon solid style2 major fa-hill-rockslide"></span>
 									<h3>Geological</h3>
 									<p>Siting and stuff. Knowing the local geology is important.</p>
 								</section>  
