--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
 							<p>Combining all three things to make crazy shit </p>
 							<div class="items style1 medium onscroll-fade-in">
 								<section>
-									<span class="icon style2 major fa-atom"></span>
+									<span class="icon solid style2 major fa-atom"></span>
 									<h3>Nuclear</h3>
 									<p>Reactors and stuff</p>
 								</section>
