--- a/links.html
+++ b/links.html
@@ -108,7 +108,8 @@
 		<br>
 	<h3>Waste Storage & Yucca Mountain</h3>
 		<br>
-	<h3>Stuff</h3>
+	<h3>SMRs</h3>
+			<p><a href="https://readwrite.com/nuclear-revolution-next-gen-reactors-coming-to-washington-state/">Readwrite- Nuclear Revolution: Next-Gen Reactors Coming to Washington State- July 20, 2023</a></p>					
 							
 						
 
