--- a/index.html
+++ b/index.html
@@ -61,22 +61,22 @@
 					<section class="wrapper style1 align-center">
 						<div class="inner">
 							<h2>Engineering Synthesis</h2>
-							<p>Applying specialized education in both nuclear and geological engineering to years of experience designing large commercial and industrial site plans, oneRaven is uniquely positioned in the emerging North American nuclear energy market focusing on the latest   </p>
+							<p>Applying specialized education in both nuclear and geological engineering to years of experience designing large commercial and industrial site plans, oneRaven is uniquely positioned in the emerging North American nuclear energy market focusing on the latest SMR technology.</p>
 							<div class="items style1 medium onscroll-fade-in">
 								<section>
 									<span class="icon solid style2 major fa-atom"></span>
 									<h3>Nuclear</h3>
-									<p>Possessing a *specialized* knowledge of requirements for siting reactors, including the massive and intensive regulatory hurdles, oneRaven understands the specific challenges faced when proposing any sort of nuclear energy project.  </p>
+									<p>Possessing a distinct knowledge of requirements for siting reactors, including the massive and intensive regulatory hurdles, oneRaven understands the specific challenges faced when proposing any sort of nuclear energy project.</p>
 								</section>
 								<section>
 									<span class="icon solid style2 major fa-road"></span>
 									<h3>Civil</h3>
-									<p>Specializing in large commercial and industrial site plans, I can do things</p>
+									<p>Focusing on the production of civil site plans for commercial and large industrial developments, often in challenging locations, oneRaven is well-qualified to assemble the necessary plans to make a project a reality. I maintain licensure as a professional engineer in three states (WY, MT, and WA).</p>
 								</section>
 								<section>
 									<span class="icon solid style2 major fa-mountain"></span>
 									<h3>Geological</h3>
-									<p>Siting and stuff. Knowing the local geology is important.</p>
+									<p>Siting and stuff. Knowing the local geology is important. write this</p>
 								</section>  
 								<!-- <section>
 									<span class="icon solid style2 major fa-wifi"></span>
