--- a/links.html
+++ b/links.html
@@ -93,7 +93,7 @@
 				
 <section class="spotlight style1 orient-left content-align-left image-position-center onscroll-image-fade-in">
 						<div class="content">
-	<h2 align="right" color="ffa500">Hotter Topics</h2>
+	<h2 align="right" color="#ffa500">Hotter Topics</h2>
 	<h3>Fukushima</h3>
 		<p><a href="https://apnews.com/article/japan-fukushima-nuclear-plant-water-release-cf6f2b99df9cea91abc7b2ad2d23d9fd">Associated Press- AP gets a rare look at Japan’s Fukushima nuclear plant as it prepares to release radioactive water - July 14, 2023</a></p>
 			<br>
