--- a/links.html
+++ b/links.html
@@ -116,7 +116,7 @@
 					
 						<div class="content">
 							<ul class="actions stacked">
-								<li><a href="index.html" class="button">Main Page</a></li>
+							<li><a href="index.html" class="button" align="right">Main Page</a></li>
 							</ul> 
 						</div>
 
