--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 								<section>
 									<span class="icon solid style2 major fa-mountain"></span>
 									<h3>Geological</h3>
-									<p>Siting and stuff. Knowing the local geology is important. write this</p>
+									<p>A comprehensive understanding of how seismologic, stratigraphic, and hydrologic variables (among many others) affect a given site is paramount to the success and safety of a project. oneRaven is intimately familiar with all of them and can apply these to a design or feasibility study.</p>
 								</section>  
 								<!-- <section>
 									<span class="icon solid style2 major fa-wifi"></span>
