--- a/index.html
+++ b/index.html
@@ -132,6 +132,9 @@
 						<div class="inner medium">
 							<h2>Get in touch</h2>
 							<h3><a href="mailto:oneravenenergy@protonmail.com">Send an email</a></h3>
+							<br>
+							<br>
+							<p>*DISCLAIMER: This website is not actively advertising any services. oneRaven Energy Consulting is a forward-looking company seeking to position itself at the precipice of the advanced nuclear energy sector when such services are required.</p>
 							<!-- <form method="post" action="#">
 								<div class="fields">
 									<div class="field half">
