--- a/links.html
+++ b/links.html
@@ -72,7 +72,7 @@
 					<section class="wrapper style1 align-center">
 						<div class="inner">
 				<h2>Links</h2>
-			<p>Work in progress as of 7/23/23. More links forthcoming.</p> 
+			<p>Work in progress as of 7/27/23. More links forthcoming.</p> 
 			</div>
 			</section>
 
@@ -84,6 +84,7 @@
 		<p><a href="https://www.epa.gov/radiation/radiation-basics">US EPA- Radiation Basics - July 18, 2023</a></p>		
 		<br>	
 	<h3>How a Pressurized Water Reactor (PWR) works</h3>
+		<p><a href="https://www.nrc.gov/reading-rm/basic-ref/students/animated-pwr.html">US Nuclear Regulatory Commission (NRC)- Pressurized Water Reactor (PWR) animation</a></p>
 		<br>
 	<h3>Economics and Power Generation</h3>
 		<br>
@@ -104,6 +105,9 @@
 				<br>
 
 	<h3>Diablo Canyon</h3>
+		<p><a href="https://news.mit.edu/2021/diablo-canyon-nuclear-plant-1108">MIT News- Q&A: Options for the Diablo Canyon nuclear plant- November 8, 2021</a></p>	
+			<p><a href="https://www.dcisc.org/">Diablo Canyon Independent Safety Committee</a></p>		
+				<p><a href="https://www.nrc.gov/info-finder/reactors/diab1.html">US Nuclear Regulatory Commission (NRC)- Diablo Canyon Reactor #1</a></p>					
 		<br>
 	<h3>What's being done about aging reactors?</h3>
 		<br>
