--- a/links.html
+++ b/links.html
@@ -95,9 +95,7 @@
 <section class="spotlight style1 orient-left content-align-left image-position-center onscroll-image-fade-in">
 						<div class="content">
 	<h2 align="right" color="#ffa500">Hotter Topics</h2>
-	<h3>Fukushima</h3>
-		<p><a href="https://apnews.com/article/japan-fukushima-nuclear-plant-water-release-cf6f2b99df9cea91abc7b2ad2d23d9fd">Associated Press- AP gets a rare look at Japan’s Fukushima nuclear plant as it prepares to release radioactive water - July 14, 2023</a></p>
-			<br>
+	
 	<h3>Tritium</h3>
 		<p><a href="https://www.thoughtco.com/facts-about-tritium-607915">ThoughtCo- 10 Interesting Facts about Radioactive Tritium - January 9, 2020</a></p>			
 		<p><a href="https://hps.org/documents/tritium_fact_sheet.pdf">Health Physics Society- Tritium Fact Sheet - January 2020</a></p>				
@@ -109,12 +107,18 @@
 			<p><a href="https://www.dcisc.org/">Diablo Canyon Independent Safety Committee</a></p>		
 				<p><a href="https://www.nrc.gov/info-finder/reactors/diab1.html">US Nuclear Regulatory Commission (NRC)- Diablo Canyon Reactor #1</a></p>					
 		<br>
+	<h3>Chornobyl (Chernobyl)</h3>
+			<p><a href="https://www.world-nuclear.org/information-library/safety-and-security/safety-of-plants/chernobyl-accident.aspx">World Nuclear Association- Chernobyl Accident 1986- April 2022</a></p>	<br>
+		<h3>Fukushima</h3>
+		<p><a href="https://apnews.com/article/japan-fukushima-nuclear-plant-water-release-cf6f2b99df9cea91abc7b2ad2d23d9fd">Associated Press- AP gets a rare look at Japan’s Fukushima nuclear plant as it prepares to release radioactive water - July 14, 2023</a></p>
+			<br>
 	<h3>What's being done about aging reactors?</h3>
 		<br>
 	<h3>Waste Storage & Yucca Mountain</h3>
 		<br>
 	<h3>SMRs</h3>
-			<p><a href="https://readwrite.com/nuclear-revolution-next-gen-reactors-coming-to-washington-state/">Readwrite- Nuclear Revolution: Next-Gen Reactors Coming to Washington State- July 20, 2023</a></p>					
+			<p><a href="https://www.energy.gov/ne/benefits-small-modular-reactors-smrs">US Office of Nuclear Energy- Benefits of Small Modular Reactors (SMRs)</a></p>	
+							<p><a href="https://readwrite.com/nuclear-revolution-next-gen-reactors-coming-to-washington-state/">Readwrite- Nuclear Revolution: Next-Gen Reactors Coming to Washington State- July 20, 2023</a></p>					
 					<br>
 					<br>
 					
