--- a/links.html
+++ b/links.html
@@ -61,6 +61,8 @@
 	<h3>What's being done about aging reactors?</h3>
 		<br>
 	<h3>Waste Storage & Yucca Mountain</h3>
+				<p><a href="https://www.nrc.gov/waste/spent-fuel-storage.html">US Nuclear Regulatory Commission (NRC)- Storage of Spent Nuclear Fuel- June 16, 2023</a></p>		
+							<p><a href="https://www.epa.gov/radiation/what-yucca-mountain-repository">US EPA- What is the Yucca Mountain repository?</a></p>		
 		<br>
 	<h3>SMRs</h3>
 			<p><a href="https://www.energy.gov/ne/benefits-small-modular-reactors-smrs">US Office of Nuclear Energy- Benefits of Small Modular Reactors (SMRs)</a></p>	
