--- a/links.html
+++ b/links.html
@@ -66,6 +66,8 @@
 		<br>
 	<h3>SMRs</h3>
 			<p><a href="https://www.energy.gov/ne/benefits-small-modular-reactors-smrs">US Office of Nuclear Energy- Benefits of Small Modular Reactors (SMRs)</a></p>	
+							<p><a href="https://www.energy.gov/ne/articles/nrc-certifies-first-us-small-modular-reactor-design">US Office of Nuclear Energy- NRC Certifies First U.S. Small Modular Reactor Design- January 20, 2023</a></p>
+							
 							<p><a href="https://readwrite.com/nuclear-revolution-next-gen-reactors-coming-to-washington-state/">Readwrite- Nuclear Revolution: Next-Gen Reactors Coming to Washington State- July 20, 2023</a></p>					
 					<br>
 					<br>
