--- a/links.html
+++ b/links.html
@@ -32,8 +32,11 @@
 	<h3>How a Pressurized Water Reactor (PWR) works</h3>
 		<p><a href="https://www.nrc.gov/reading-rm/basic-ref/students/animated-pwr.html">US Nuclear Regulatory Commission (NRC)- Pressurized Water Reactor (PWR) animation</a></p>
 		<br>
-	<h3>Economics and Power Generation</h3>
-		<br>
+	<h3>Economics</h3>
+			<p><a href="https://www.nucleartourist.com/basics/costs.htm">Nuclear Tourist- Cost Comparison for Nuclear vs. Coal- December 2005</a></p>
+		<p><a href="https://world-nuclear.org/information-library/economic-aspects/economics-of-nuclear-power.aspx">World Nuclear Association- 
+Economics of Nuclear Power- August 2022</a></p>
+			<br>
 		</div>
 		</section>
 
