--- a/links.html
+++ b/links.html
@@ -36,6 +36,7 @@
 			<p><a href="https://www.nucleartourist.com/basics/costs.htm">Nuclear Tourist- Cost Comparison for Nuclear vs. Coal- December 2005</a></p>
 		<p><a href="https://world-nuclear.org/information-library/economic-aspects/economics-of-nuclear-power.aspx">World Nuclear Association- 
 Economics of Nuclear Power- August 2022</a></p>
+			<p><a href="https://www.energyandcapital.com/articles/how-efficient-is-nuclear-really-/76858">Energy & Capital- How Efficient is Nuclear Really?- January 22, 2017</a></p>
 			<br>
 		</div>
 		</section>
