--- a/links.html
+++ b/links.html
@@ -61,9 +61,8 @@ Economics of Nuclear Power- August 2022</a></p>
 			<p><a href="https://www.world-nuclear.org/information-library/safety-and-security/safety-of-plants/chernobyl-accident.aspx">World Nuclear Association- Chernobyl Accident 1986- April 2022</a></p>	<br>
 		<h3>Fukushima</h3>
 		<p><a href="https://apnews.com/article/japan-fukushima-nuclear-plant-water-release-cf6f2b99df9cea91abc7b2ad2d23d9fd">Associated Press- AP gets a rare look at Japan’s Fukushima nuclear plant as it prepares to release radioactive water - July 14, 2023</a></p>
-			<br>
-	<h3>What's being done about aging reactors?</h3>
-		<br>
+			<p><a href="https://www.britannica.com/event/Fukushima-accident">Britannica- Fukushima Accident - July 2023</a></p>
+	<br>
 	<h3>Waste Storage & Yucca Mountain</h3>
 				<p><a href="https://www.nrc.gov/waste/spent-fuel-storage.html">US Nuclear Regulatory Commission (NRC)- Storage of Spent Nuclear Fuel- June 16, 2023</a></p>		
 							<p><a href="https://www.epa.gov/radiation/what-yucca-mountain-repository">US EPA- What is the Yucca Mountain repository?</a></p>		
